--- a/index.html
+++ b/index.html
@@ -11,23 +11,8 @@ and open the template in the editor.
   </head>
   <body>
     <ul>
-      <li><a href="main.html">index</a></li>
-      <li><a href="antivirus.html">antivirus</a></li>
-      <li><a href="catalog-microsoft.html">catalog-microsoft</a></li>
-      <li><a href="blog.html">blog</a></li>
-      <li><a href="cart.html">cart</a></li>
-      <li><a href="cart_organization.html">cart_organization</a></li>
-      <li><a href="contacts.html">contacts</a></li>
+      <li><a href="news.html">news</a></li>
       <li><a href="content.html">content</a></li>
-      <li><a href="profile.html">profile</a></li>
-      <li><a href="login.html">login</a></li>
-      <li><a href="profile_order.html">profile_order</a></li>
-      <li><a href="profile_orders.html">profile_orders</a></li>
-      <li><a href="item.html">item</a></li>
-      <li><a href="organization.html">organization</a></li>
-      <li><a href="organization_add.html">organization_add</a></li>
-      <li><a href="catalog_other.html">catalog_other</a></li>
-      <li><a href="catalog_copy.html">catalog_copy</a></li>
     </ul>
   </body>
 </html>
