--- a/components.html
+++ b/components.html
@@ -3,9 +3,16 @@
     <title>Components</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="assets/js/libs/slick/slick.css">
+    <link rel="stylesheet" href="assets/js/libs/slick/slick-theme.css">
     <link rel="stylesheet" href="assets/css/common.css">
     <!--<link rel="stylesheet" href="assets/css/jquery.formstyler.css">-->
     <script src="assets/js/libs/jquery-2.1.4.min.js"></script>
+    <script src="assets/js/libs/slick/slick.min.js"></script>
+    <script src="assets/js/libs/jquery.fancybox.min.js"></script>
+    <script src="assets/js/libs/jquery.hashchange.min.js"></script>
+    <script src="assets/js/libs/jquery.easytabs.min.js"></script>
     <!--<script src="assets/js/libs/jquery.formstyler.min.js"></script>-->
     <script src="assets/js/common.js"></script>
   </head>
