--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ and open the template in the editor.
     <ul>
       <li><a href="news.html">news</a></li>
       <li><a href="content.html">content</a></li>
+      <li><a href="tovar.html">tovar</a></li>
     </ul>
   </body>
 </html>
