--- a/tovar.html
+++ b/tovar.html
@@ -94,14 +94,23 @@
               </div>              
             </div>
             <div id="video">
-              <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9bZkp7q19f0?rel=0" frameborder="0" allowfullscreen></iframe>
+              <div>
+                <div class="content">
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="//www.youtube.com/embed/9bZkp7q19f0?rel=0" frameborder="0" allowfullscreen></iframe>
+                  </div>                
+                </div>
+                <div class="options">
+                  <div class="more-video">
+                    <a href="//www.youtube.com/embed/H65p1qdiAXE?rel=0" class="js-video-iframe" data-fancybox-type="iframe"><img src="//i.ytimg.com/vi/H65p1qdiAXE/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=MEYTJb7q6k4SfzsHOudr8hwDrY0"></a>
+                    <p><a href="//www.youtube.com/embed/H65p1qdiAXE?rel=0" class="js-video-iframe" data-fancybox-type="iframe">Бюджетная косметика — обзор, аналоги, что купить</a></p>
+                  </div>
+                  <div class="more-video">
+                    <a href="//www.youtube.com/embed/otM8EzzyD-g?rel=0" class="js-video-iframe" data-fancybox-type="iframe"><img src="//i.ytimg.com/vi/otM8EzzyD-g/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=VPK97mi7GjwhCOuc_bkal_Rgjqw"></a>
+                    <p><a href="//www.youtube.com/embed/otM8EzzyD-g?rel=0" class="js-video-iframe" data-fancybox-type="iframe">Обзор косметики Maybelline | Babylips, Baby skin, Color Tattoo, Dream Flawless nude | Часть 1</a></p>
+                  </div>
+                </div>
               </div>
-                <a href="https://www.youtube.com/embed/H65p1qdiAXE?rel=0"><img src="https://i.ytimg.com/vi/H65p1qdiAXE/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=MEYTJb7q6k4SfzsHOudr8hwDrY0"></a>
-                <p>Бюджетная косметика — обзор, аналоги, что купить</p>
-                <a id="test" href="http://www.youtube.com/embed/L9szn1QQfas?autoplay=1">test</a>
-                <a href="//www.youtube.com/embed/otM8EzzyD-g?rel=0"><img src="https://i.ytimg.com/vi/otM8EzzyD-g/hqdefault.jpg?custom=true&w=246&h=138&stc=true&jpg444=true&jpgq=90&sp=68&sigh=VPK97mi7GjwhCOuc_bkal_Rgjqw"></a>
-                <p>Обзор косметики Maybelline | Babylips, Baby skin, Color Tattoo, Dream Flawless nude | Часть 1</p>
             </div>
             <div id="doc">
               <h3>Документация</h3>
