--- a/content.html
+++ b/content.html
@@ -98,6 +98,12 @@
                   <input type="text" class="form-control" id="exampleInputName2" placeholder="Placeholder" value="vicpetrova">
                   <span class="help-block">Подпись</span>
                 </div>
+                <select data-placeholder="Список">
+                  <option></option>
+                  <option>Строка</option>
+                  <option>Строка</option>
+                  <option>Строка</option>
+                </select>
               </div>
               <div class="col-sm-3">
                 <p><button class="btn btn-danger">Кнопка</button></p>
