--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@ and open the template in the editor.
   </head>
   <body>
     <ul>
-      <li><a href="news.html">news</a></li>
+      <li><a href="tovar.html">Товар (слайдеры, табы, видео работают)</a></li>
+      <li><a href="catalog.html">Каталог (переключатель вида, слайдер работают)</a></li>
+      <li><a href="office.html">ЛК (табы работают)</a></li>
+      <li><a href="main.html">Главная (пока не все готово)</a></li>
+      <li><a href="news.html">Новости (слайдер товаров работает)</a></li>
+      <li><a href="404.html">404</a></li>
       <li><a href="content.html">content</a></li>
-      <li><a href="tovar.html">tovar</a></li>
     </ul>
   </body>
 </html>
