--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
   </head>
   <body>
     <ul>
+      <li><a href="cart.html">Корзина</a></li>
       <li><a href="tovar.html">Товар (слайдеры, табы, видео работают)</a></li>
       <li><a href="catalog.html">Каталог (переключатель вида, слайдер работают)</a></li>
       <li><a href="office.html">ЛК (табы работают)</a></li>
