--- a/office.html
+++ b/office.html
@@ -91,7 +91,7 @@
               </div>
             </div>
             <div id="orders">
-              <table>
+              <table class="table-striped">
                 <thead>
                   <th>№</th>
                   <th>Дата</th>
@@ -192,7 +192,7 @@
               </table>
             </div>
             <div id="bonus">
-              <table>
+              <table class="table-striped">
                 <thead>
                   <th>№</th>
                   <th>Дата</th>
