--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ and open the template in the editor.
   <body>
     <ul>
       <li><a href="cart.html">Корзина</a></li>
+      <li><a href="cart_complete.html">Оформленный заказ</a></li>
       <li><a href="tovar.html">Товар (слайдеры, табы, видео работают)</a></li>
       <li><a href="catalog.html">Каталог (переключатель вида, слайдер работают)</a></li>
       <li><a href="office.html">ЛК (табы работают)</a></li>
