--- a/components.html
+++ b/components.html
@@ -51,9 +51,39 @@
           <div class="right-column">
             <div class="searchbar-form">
               <form>
-                <input type="text" name="sq" placeholder="Начните вводить текст" autocomplete="off">
+                <input type="text" name="sq" placeholder="Начните вводить текст" autocomplete="off" class="js-qs-input">
                 <button type="submit">Найти</button>
-              </form>              
+                <div class="goods-list-quick-search js-qs">
+                  <div>
+                    <div>
+                      <hr>
+                      <ul>
+                      <li>
+                        <div class="image">
+                          <a href="#"><img src="assets/images/goods/1.jpg" alt="good1"></a>
+                        </div>
+                        <h3><a href="#">CYTOLIFE HYALURONIC ACID&nbsp;HA 1,2%</a></h3>
+                        <p class="price"><span class="cost">3 199 руб</span> <span class="cost-old">3 999 руб</span></p>
+                      </li>
+                      <li>
+                        <div class="image">
+                          <a href="#"><img src="assets/images/goods/2.jpg" alt="good2"></a>
+                        </div>
+                        <h3><a href="#">CYTOLIFE AQUA+ MESOLIFT&nbsp;0,9%</a></h3>
+                        <p class="price"><span class="cost">2 550 руб</span></p>
+                      </li>
+                      <li>
+                        <div class="image">
+                          <a href="#"><img src="assets/images/goods/4.jpg" alt="good4"></a>
+                        </div>
+                        <h3><a href="#">MezoLax HSR (1x5ml)</a></h3>
+                        <p class="price"><span class="cost">1 189 руб</span></p>
+                      </li>
+                    </ul>
+                    </div>
+                  </div>
+                </div>
+              </form>
             </div>
             <div class="minicart">
               <a href="#">107 896 руб<span>24</span></a>
