--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@ and open the template in the editor.
       <li><a href="404.html">404</a></li>
       <li><a href="content.html">content</a></li>
     </ul>
+    <p>Quick-search показывается при фокусе инпута.</p>
   </body>
 </html>
