--- a/cart_complete.html
+++ b/cart_complete.html
@@ -136,7 +136,7 @@
             </div>
             <div class="form-group">
               <label>Email</label>
-              <p>vicpetrova@mail.ru"</p>
+              <p>vicpetrova@mail.ru</p>
             </div>
             <div class="form-group">
               <label>Комментарии к заказу</label>
