--- a/components.html
+++ b/components.html
@@ -133,14 +133,108 @@
                 <li>
                   <a href="#">Маски</a>
                 </li>
-                <li>
+                <li class="with-extended">
                   <a href="#">Тоники</a>
+                  <div class="extended-menu">
+                    <div class="list">
+                      <ul class="text-two-columns">
+                        <li><a href="#">Уход за лицом</a>
+                          <ul>
+                            <li><a href="#">Nivea Men</a></li>
+                            <li><a href="#">Yves Rocher</a></li>
+                            <li><a href="#">Cytolife Laboratories</a></li>
+                            <li><a href="#">Good Morning!</a></li>
+                            <li><a href="#">Калинка</a></li>
+                          </ul>
+                        </li>
+                        <li><a href="#">Омолаживающие</a>
+                          <ul>
+                            <li><a href="#">Givenchy</a></li>
+                            <li><a href="#">MIA Cosmetics</a></li>
+                            <li><a href="#">L’Oreal Paris</a></li>
+                            <li><a href="#">Philip & Sons</a></li>
+                          </ul>
+                        </li>
+                        <li><a href="#">Для души и тела</a>
+                          <ul>
+                            <li><a href="#">Ponsobys</a></li>
+                            <li><a href="#">Estee Lauder’s</a></li>
+                            <li><a href="#">Pantene Pro-V</a></li>
+                            <li><a href="#">Urban Decay</a></li>
+                            <li><a href="#">Bourjois Paris</a></li>
+                            <li><a href="#">Himalaya</a></li>
+                            <li><a href="#">Невская Косметика</a></li>
+                            <li><a href="#">Чистая Линия</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="goods">
+                      <ul>
+                        <li>
+                          <div class="image">
+                            <a href="#"><img src="assets/images/goods/2.jpg" alt="good"></a>
+                            <div class="discount">-20%</div>
+                          </div>
+                          <h3><a href="#">CYTOLIFE AQUA+ MESOLIFT&nbsp;0,9%</a></h3>
+                          <p class="price"><span class="cost">3 199 руб</span> <span class="cost-old">3 999 руб</span></p>
+                        </li>
+                      </ul>                      
+                    </div>
+                  </div>
                 </li>
                 <li>
                   <a href="#">Филлеры</a>
                 </li>
-                <li>
+                <li class="with-extended">
                   <a href="#">Массажеры</a>
+                  <div class="extended-menu">
+                    <div class="list">
+                      <ul class="text-two-columns">
+                        <li><a href="#">Уход за лицом</a>
+                          <ul>
+                            <li><a href="#">Nivea Men</a></li>
+                            <li><a href="#">Yves Rocher</a></li>
+                            <li><a href="#">Cytolife Laboratories</a></li>
+                            <li><a href="#">Good Morning!</a></li>
+                            <li><a href="#">Калинка</a></li>
+                          </ul>
+                        </li>
+                        <li><a href="#">Омолаживающие</a>
+                          <ul>
+                            <li><a href="#">Givenchy</a></li>
+                            <li><a href="#">MIA Cosmetics</a></li>
+                            <li><a href="#">L’Oreal Paris</a></li>
+                            <li><a href="#">Philip & Sons</a></li>
+                          </ul>
+                        </li>
+                        <li><a href="#">Для души и тела</a>
+                          <ul>
+                            <li><a href="#">Ponsobys</a></li>
+                            <li><a href="#">Estee Lauder’s</a></li>
+                            <li><a href="#">Pantene Pro-V</a></li>
+                            <li><a href="#">Urban Decay</a></li>
+                            <li><a href="#">Bourjois Paris</a></li>
+                            <li><a href="#">Himalaya</a></li>
+                            <li><a href="#">Невская Косметика</a></li>
+                            <li><a href="#">Чистая Линия</a></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="goods">
+                      <ul>
+                        <li>
+                          <div class="image">
+                            <a href="#"><img src="assets/images/goods/2.jpg" alt="good"></a>
+                            <div class="discount">-20%</div>
+                          </div>
+                          <h3><a href="#">CYTOLIFE AQUA+ MESOLIFT&nbsp;0,9%</a></h3>
+                          <p class="price"><span class="cost">3 199 руб</span> <span class="cost-old">3 999 руб</span></p>
+                        </li>
+                      </ul>                      
+                    </div>
+                  </div>
                 </li>
                 <li>
                   <a href="#">Специальная косметика</a>
