--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@ and open the template in the editor.
       <li><a href="cart_complete.html">Оформленный заказ</a></li>
       <li><a href="tovar.html">Товар (слайдеры, табы, видео работают)</a></li>
       <li><a href="catalog.html">Каталог (переключатель вида, слайдер работают)</a></li>
+      <li><a href="login.html">Логин</a></li>
       <li><a href="office.html">ЛК (табы работают)</a></li>
-      <li><a href="main.html">Главная (пока не все готово)</a></li>
+      <li><a href="main.html">Главная</a></li>
       <li><a href="news.html">Новости (слайдер товаров работает)</a></li>
       <li><a href="404.html">404</a></li>
       <li><a href="content.html">content</a></li>
