--- a/components.html
+++ b/components.html
@@ -35,7 +35,7 @@
               <span>+7 (831)</span> 550 45 25
             </div>
             <div class="header-callback">
-              <button class="btn btn-primary">Заказать звонок</button>
+              <a href="#comp_callback" class="btn btn-primary js-fancy-inline">Заказать звонок</a>
             </div>
           </div>
         </div>
@@ -584,6 +584,28 @@
             <li><a href="#">Оплата и доставка</a></li>
           </menu>
         </div>
+      </div>
+      
+      <div id="comp_callback" style="display:none;width:300px">
+        <form class="callback">
+          <fieldset>
+            <legend>Перезвонить вам?</legend>
+            <div class="form-group required">
+              <input type="text" name="name" required placeholder="Имя">
+            </div>
+            <div class="form-group required">
+              <input type="text" name="phone" required placeholder="Телефон">
+            </div>
+            <button type="submit" class="btn btn-primary">Заказать звонок</button>
+          </fieldset>
+        </form>
+        <form class="callback">
+          <fieldset>
+            <legend>Спасибо!</legend>
+            <p>Ваша заявка принята!<br>Мы свяжемся с вами в ближайшее время</p>
+            <button type="reset" class="btn btn-primary">Закрыть</button>
+          </fieldset>
+        </form>
       </div>
       
     </footer>
