--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
   </head>
   <body>
     <ul>
+      <li><a href="contacts.html">Контакты</a></li>
       <li><a href="cart.html">Корзина</a></li>
       <li><a href="cart_complete.html">Оформленный заказ</a></li>
       <li><a href="tovar.html">Товар (слайдеры, табы, видео работают)</a></li>
