--- a/content.html
+++ b/content.html
@@ -113,10 +113,16 @@
                   <input type="text" class="form-control" id="exampleInputName3" placeholder="Placeholder" value="vicpetrova">
                   <span class="help-block">Подпись</span>
                 </div>
+                <div class="radio"><label><input type="radio" name="radio" checked> Radio</label></div>
+                <div class="radio"><label><input type="radio" name="radio"> Radio</label></div>
+                <div class="radio disabled"><label><input type="radio" name="radio" disabled> Radio</label></div>
               </div>
               <div class="col-sm-3">
                 <p><button class="btn btn-success">Кнопка</button></p>
                 <p><button class="btn btn-success" disabled>Отключена</button></p>
+                <div class="checkbox"><label><input type="checkbox" name="checkbox" checked> Checkbox</label></div>
+                <div class="checkbox"><label><input type="checkbox" name="checkbox"> Checkbox</label></div>
+                <div class="checkbox disabled"><label><input type="checkbox" name="checkbox" disabled> Checkbox</label></div>
               </div>
             </div>
             <br>
