--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@ and open the template in the editor.
       <li><a href="contacts.html">Контакты</a></li>
       <li><a href="cart.html">Корзина</a></li>
       <li><a href="cart_complete.html">Оформленный заказ</a></li>
-      <li><a href="tovar.html">Товар (слайдеры, табы, видео работают)</a></li>
-      <li><a href="catalog.html">Каталог (переключатель вида, слайдер работают)</a></li>
+      <li><a href="tovar.html">Товар</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
+      <li><a href="search.html">Поиск</a></li>
+      <li><a href="favorites.html">Избранное</a></li>
+      <li><a href="category.html">Категория</a></li>
       <li><a href="login.html">Логин</a></li>
-      <li><a href="office.html">ЛК (табы работают)</a></li>
+      <li><a href="office.html">ЛК</a></li>
+      <li><a href="not_logged.html">not logged</a></li>
       <li><a href="main.html">Главная</a></li>
-      <li><a href="news.html">Новости (слайдер товаров работает)</a></li>
+      <li><a href="news.html">Новости</a></li>
       <li><a href="404.html">404</a></li>
       <li><a href="content.html">content</a></li>
     </ul>
-    <p>Quick-search показывается при фокусе инпута.</p>
   </body>
 </html>
