--- a/cart.html
+++ b/cart.html
@@ -49,7 +49,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/1.jpg" alt="goods1"></a></td>
               <td class="name"><a href="#">CYTOLIFE HYALURONIC ACID HA 1,2%</a></td>
               <td class="price">3 199 руб</td>
-              <td><input type="number" value="4"></td>
+              <td><input type="number" min="1" value="4"></td>
               <td class="total-cost">12 769 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -57,7 +57,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/2.jpg" alt="goods2"></a></td>
               <td class="name"><a href="#">KOSMO-AGE</a></td>
               <td class="price">1 470 руб</td>
-              <td><input type="number" value="18"></td>
+              <td><input type="number" min="1" value="18"></td>
               <td class="total-cost">26 460 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -65,7 +65,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/3.jpg" alt="goods3"></a></td>
               <td class="name"><a href="#">CYTOLIFE REMODULATOR 1,1%+Zn</a></td>
               <td class="price">2 840 руб</td>
-              <td><input type="number" value="6"></td>
+              <td><input type="number" min="1" value="6"></td>
               <td class="total-cost">17 040 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -73,7 +73,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/4.jpg" alt="goods4"></a></td>
               <td class="name"><a href="#">Veluderm Botulopeptide</a></td>
               <td class="price">2 890 руб</td>
-              <td><input type="number" value="3"></td>
+              <td><input type="number" min="1" value="3"></td>
               <td class="total-cost">8 697 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -81,7 +81,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/1.jpg" alt="goods1"></a></td>
               <td class="name"><a href="#">CYTOLIFE HYALURONIC ACID HA 1,2%</a></td>
               <td class="price">3 199 руб</td>
-              <td><input type="number" value="4"></td>
+              <td><input type="number" min="1" value="4"></td>
               <td class="total-cost">12 769 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -89,7 +89,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/2.jpg" alt="goods2"></a></td>
               <td class="name"><a href="#">KOSMO-AGE</a></td>
               <td class="price">1 470 руб</td>
-              <td><input type="number" value="18"></td>
+              <td><input type="number" min="1" value="18"></td>
               <td class="total-cost">26 460 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -97,7 +97,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/3.jpg" alt="goods3"></a></td>
               <td class="name"><a href="#">CYTOLIFE REMODULATOR 1,1%+Zn</a></td>
               <td class="price">2 840 руб</td>
-              <td><input type="number" value="6"></td>
+              <td><input type="number" min="1" value="6"></td>
               <td class="total-cost">17 040 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -105,7 +105,7 @@
               <td class="image"><a href="#"><img src="assets/images/goods/4.jpg" alt="goods4"></a></td>
               <td class="name"><a href="#">Veluderm Botulopeptide</a></td>
               <td class="price">2 890 руб</td>
-              <td><input type="number" value="3"></td>
+              <td><input type="number" min="1" value="3"></td>
               <td class="total-cost">8 697 руб</td>
               <td><a class="icon remove" title="Удалить" href="#">Удалить</a></td>
             </tr>
@@ -172,7 +172,7 @@
                     <span class="delivery-name">Банковская карта</span>
                   </label>
                   <p class="help-block">Мгновенная и безопасная оплата заказа без комиссии.</p>
-                  <div class="radio-extended">
+<!--                  <div class="radio-extended">
                     <div class="form-group">
                       <label for="cart-number">Номер карты</label>
                       <input class="form-control" type="text" name="cart-number" id="cart-number" value="4276 8800 9432 7810">
@@ -191,7 +191,7 @@
                       <label for="cart-owner">Имя как на карте</label>
                       <input class="form-control" type="text" name="cart-owner" id="cart-owner" value="Petrova Victoriia">
                     </div>
-                  </div>
+                  </div>-->
                 </div>
               </div>
             </div>
@@ -223,7 +223,7 @@
           </div>
           <div class="row">
             <div class="col-sm-8">
-              <h2>Реквизиты <span><a class="green-link">Взять данные из профиля?</a></span></h2>
+              <h2>Реквизиты <!--<span><a class="green-link">Взять данные из профиля?</a></span>--></h2>
               <div class="well">
                 <div class="row">
                   <div class="col-sm-6">
