--- a/office.html
+++ b/office.html
@@ -43,7 +43,7 @@
              <ul class="nav nav-tabs">
               <li><a href="#profile">Профиль</a></li>
               <li><a href="#orders">Мои заказы</a></li>
-              <li><a href="#bonus">Бонусы (1720)</a></li>
+              <li><a href="#bonus">Мои бонусы (1720)</a></li>
               <li><a href="#video">Видео</a></li>
             </ul>
             <div id="profile">
