--- a/catalog.html
+++ b/catalog.html
@@ -81,12 +81,12 @@
             </div>
             <div>
               <a href="#" class="grid-options grid" data-list="grid" title="Сетка">Сетка</a>
-              <a href="#" class="grid-options full active" data-list="full" title="Полный список">Полный список</a>
-              <a href="#" class="grid-options short" data-list="short" title="Краткий список">Краткий список</a>
+              <a href="#" class="grid-options full" data-list="full" title="Полный список">Полный список</a>
+              <a href="#" class="grid-options short active" data-list="short" title="Краткий список">Краткий список</a>
             </div>
           </div>
 
-          <div class="goods-list full">
+          <div class="goods-list short">
 
             <div class="goods-list-item">
               <div class="image">
@@ -101,7 +101,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">3 199 руб</span> <span class="cost-old">3 999 руб</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary">В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="18"></div><button class="btn btn-primary">В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite" title="В избранное">В избранное</a>
@@ -122,7 +122,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">2 550 руб</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary">В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="1"></div><button class="btn btn-primary">В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare active" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite" title="В избранное">В избранное</a>
@@ -143,7 +143,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">1 189 руб</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary">В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="5"></div><button class="btn btn-primary">В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite" title="В избранное">В избранное</a>
@@ -164,7 +164,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">1 125 руб</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary">В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="10"></div><button class="btn btn-primary">В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite active" title="В избранное">В избранное</a>
@@ -185,7 +185,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">3 199 руб</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary">В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="1"></div><button class="btn btn-primary">В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite" title="В избранное">В избранное</a>
@@ -206,7 +206,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">2 550 руб</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary">В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="1"></div><button class="btn btn-primary">В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare active" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite" title="В избранное">В избранное</a>
@@ -228,7 +228,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">1 189 руб</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary">В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="1"></div><button class="btn btn-primary">В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite" title="В избранное">В избранное</a>
@@ -249,7 +249,7 @@
               <div class="footer">
                 <p class="price"><span class="cost">нет в наличии</span></p>
                 <div class="buttons">
-                  <form><button class="btn btn-primary" disabled>В корзину</button></form>
+                  <form><div class="counter"><input type="number" min="1" value="1"></div><button class="btn btn-primary" disabled>В корзину</button></form>
                   <div class="icons">
                     <a href="#" class="icon compare" title="Сравнить">Сравнить</a>
                     <a href="#" class="icon favorite active" title="В избранное">В избранное</a>
